[package]
name = "cuppa"
version = "0.0.6"
description = "Standard library with usefull methods to boots the development"
authors = ["Tufik Chediak <tufik2@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cloudbit-interactive/cuppars.git"

[lib]
name = "cuppa"
path = "src/lib.rs"

[dependencies]
mysql = "20.1.0"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"